@@ -1,6 +1,8 @@
 1.2.0 /
 [Alexandr Topilski]
 - Help command
+- Common api for databases
+- Load Databases - Amazon Elastic Cache - Redis #65
 
 1.1.1 / November 23, 2016
 [Alexandr Topilski]
